--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dulces</title>
-
+    <!--Flaticon-->
+    <link rel="shortcut icon" href="./src/images/flaticon.png" type="image/x-icon">
     <!--Link de css-->
     <link rel="stylesheet" href="./src/styles/index.css">
     <!-- Enlace al CDN de FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <!--Lenguajes de programación-->
+    <script src="./src/jslib/jquery.js"></script>
 
 </head>
 <body>
@@ -20,16 +22,16 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#Iniciar">Iniciar Sesion</a></li>
-                    <li><a href="#register">Registrarse</a></li>
+                    <li><a href="./src/views/form.html">Iniciar Sesion</a></li>
+                    <li><a href="./src/views/form.html">Registrarse</a></li>
                 </ul>
             </nav>
         </div>
         <div class="header-bottom">
             <div class="info">
-                <h2>Los mejores dulces</h2>
-                <p>Ingresa para ver nuestro catalogo de dulces y hacer pedidos en linea.</p>
-                <button class="btn btn-in"><a href="">Ingresar</a></button>
+                <h2>¡Descubre nuestros deliciosos dulces!</h2>
+                <p>Explora nuestro catálogo de exquisitos dulces y realiza tus pedidos en línea hoy mismo.</p>
+                <button class="btn btn-in"><a href="./src/views/form.html">¡Ingresar Ahora!</a></button>
             </div>
             <picture>
                 <img src="./src/images/candy3.png" alt="candy">
@@ -38,19 +40,49 @@
     </header>
     <main>
         <div class="list-candy">
-            <div class="candy chocolate">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 6.5c-3 0-4.5-.5-4.5-3.5H5v18h14zm0 8.5H5m0-6h14m-7 12V3"/></svg>
+            <div class="box-candy">
+                <div class="candy chocolate">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 6.5c-3 0-4.5-.5-4.5-3.5H5v18h14zm0 8.5H5m0-6h14m-7 12V3"/></svg>
+                </div>
+                <span class="chocolateS">Chocolates</span>
             </div>
-            <div class="candy cookie">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"><path fill="currentColor" d="M1 8a7 7 0 0 1 8.022-6.926a.5.5 0 0 1 .338.781a2 2 0 0 0 1.273 3.111a.5.5 0 0 1 .4.401a2 2 0 0 0 3.112 1.273a.5.5 0 0 1 .78.338A7 7 0 1 1 1 8m7-6a6 6 0 1 0 5.998 5.83a3.001 3.001 0 0 1-3.869-1.959A3.001 3.001 0 0 1 8.17 2.002A6.118 6.118 0 0 0 8 2m.75 6a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0m-3.5 3.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m.25-5.25a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0M9.75 12a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5"/></svg>
+            <div class="box-candy">
+                <div class="candy cookie">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16"><path fill="currentColor" d="M1 8a7 7 0 0 1 8.022-6.926a.5.5 0 0 1 .338.781a2 2 0 0 0 1.273 3.111a.5.5 0 0 1 .4.401a2 2 0 0 0 3.112 1.273a.5.5 0 0 1 .78.338A7 7 0 1 1 1 8m7-6a6 6 0 1 0 5.998 5.83a3.001 3.001 0 0 1-3.869-1.959A3.001 3.001 0 0 1 8.17 2.002A6.118 6.118 0 0 0 8 2m.75 6a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0m-3.5 3.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m.25-5.25a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0M9.75 12a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5"/></svg>
+                </div>
+                <span class="cookieS">Galletas</span>
             </div>
-            <div class="candy ice">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024"><path fill="currentColor" d="M128.64 448a208 208 0 0 1 193.536-191.552a224 224 0 0 1 445.248 15.488A208.128 208.128 0 0 1 894.784 448H896L548.8 983.68a32 32 0 0 1-53.248.704L128 448zm64.256 0h286.208a144 144 0 0 0-286.208 0m351.36 0h286.272a144 144 0 0 0-286.272 0m-294.848 64l271.808 396.608L778.24 512zM511.68 352.64a207.872 207.872 0 0 1 189.184-96.192a160 160 0 0 0-314.752 5.632c52.608 12.992 97.28 46.08 125.568 90.56"/></svg>
+            <div class="box-candy">
+                <div class="candy ice">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024"><path fill="currentColor" d="M128.64 448a208 208 0 0 1 193.536-191.552a224 224 0 0 1 445.248 15.488A208.128 208.128 0 0 1 894.784 448H896L548.8 983.68a32 32 0 0 1-53.248.704L128 448zm64.256 0h286.208a144 144 0 0 0-286.208 0m351.36 0h286.272a144 144 0 0 0-286.272 0m-294.848 64l271.808 396.608L778.24 512zM511.68 352.64a207.872 207.872 0 0 1 189.184-96.192a160 160 0 0 0-314.752 5.632c52.608 12.992 97.28 46.08 125.568 90.56"/></svg>
+                </div>
+                <span class="iceS">Helados</span>
             </div>
-            <div class="candy bakery">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 15 15"><path fill="currentColor" d="M5.294 4.382L6 9.5a.979.979 0 0 0 1 1h1a.979.979 0 0 0 1-1l.706-5.118C9.706 3 7.5 3 7.5 3S5.291 3 5.294 4.382M3.5 5C2 5 2 6 2 6l1 4h1.5a.793.793 0 0 0 .794-.765L4.5 5Zm-2 2.5a1.533 1.533 0 0 0-1.059.412A1.366 1.366 0 0 0 0 8.794V11h.882A1.02 1.02 0 0 0 2 10Zm10-2.5C13 5 13 6 13 6l-1 4h-1.5a.793.793 0 0 1-.794-.765L10.5 5Zm2 2.5a1.533 1.533 0 0 1 1.059.412a1.366 1.366 0 0 1 .441.882V11h-.882A1.02 1.02 0 0 1 13 10Z"/></svg>
+            <div class="box-candy">
+                <div class="candy bakery">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 15 15"><path fill="currentColor" d="M5.294 4.382L6 9.5a.979.979 0 0 0 1 1h1a.979.979 0 0 0 1-1l.706-5.118C9.706 3 7.5 3 7.5 3S5.291 3 5.294 4.382M3.5 5C2 5 2 6 2 6l1 4h1.5a.793.793 0 0 0 .794-.765L4.5 5Zm-2 2.5a1.533 1.533 0 0 0-1.059.412A1.366 1.366 0 0 0 0 8.794V11h.882A1.02 1.02 0 0 0 2 10Zm10-2.5C13 5 13 6 13 6l-1 4h-1.5a.793.793 0 0 1-.794-.765L10.5 5Zm2 2.5a1.533 1.533 0 0 1 1.059.412a1.366 1.366 0 0 1 .441.882V11h-.882A1.02 1.02 0 0 1 13 10Z"/></svg>
+                </div>
+                <span class="bakeryS">Pan</span>
             </div>
         </div>
+        <div class="posters">
+            <picture class="poster">
+                <img src="./src/images/poster/1.png" alt="">
+            </picture>
+            <picture class="poster">
+                <img src="./src/images/poster/2.png" alt="">
+            </picture>
+            <picture class="poster">
+                <img src="./src/images/poster/3.png" alt="">
+            </picture>
+            <picture class="poster">
+                <img src="./src/images/poster/4.png" alt="">
+            </picture>
+        </div>
     </main>
+    <footer>
+        <h3>Dulceria</h3>
+        <span>Dulceria derechos reservados</span>
+    </footer>
 </body>
 </html>
