pull before push

--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@
         <h3>Dulceria</h3>
         <span>Dulceria derechos reservados</span>
     </footer>
+    <script src="./src/functions/ready.js"></script>
 </body>
 </html>
